PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-312-function-char/gcc-compile.txt
input.c: In function ‘function’:
input.c:4:15: error: expected ‘;’ before ‘}’ token
    4 |     return ret
      |               ^
      |               ;
    5 | }
      | ~              

return code: 1
